// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot - only default props 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary"
  >
    <span
      class="MuiChip-label"
    />
  </div>
</DocumentFragment>
`;

exports[`error chip snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary makeStyles-outlinedPrimary-34"
  >
    <span
      class="MuiChip-label"
    />
  </div>
</DocumentFragment>
`;
